Added Database, AutoMapper, Unit of Work and DTOs

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Hotellisting_db; integrated security=true" //database=Hotellisting_db baza de date cu care vreau sa lucrez pe server
+  },
   "AllowedHosts": "*"
 }
